k8s/01-rbac.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: k8s-monitor
