k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8s-monitor
  namespace: k8s-monitor
  labels:
    app: k8s-monitor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8s-monitor
  template:
    metadata:
      labels:
        app: k8s-monitor
    spec:
      serviceAccountName: k8s-monitor
      containers:
        - name: monitor
          image: vinnioliver66/k8s-monitor:latest
          imagePullPolicy: Always
          volumeMounts:
            - name: postmortems
              mountPath: /postmortems
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
      volumes:
        - name: postmortems
          persistentVolumeClaim:
            claimName: postmortems-pvc
